@@ -1,4 +1,11 @@
-2023-04-01  Youling Tang <tangyouling@loongson.cn>
+2023-04-07  Youling Tang  <tangyouling@loongson.cn>
+
+	* Makefile.am (loongarch_SRCS): Add loongarch_cfi.c and loongarch_regs.c.
+	* loongarch_cfi.c: New file.
+	* loongarch_regs.c: Likewise.
+	* loongarch_init.c (loongarch_init): Hook register_info and abi_cfi.
+
+2023-04-01  Youling Tang  <tangyouling@loongson.cn>
 
 	* loongarch_init.c (loongarch_init): Hook check_special_symbol.
 	* loongarch_symbol.c (loongarch_check_special_symbol): New function.
